force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/clofor_com_cfs__TAXDeclaration__c.object-meta.xml
<CustomObject>
    <label>Obligation Decl</label>
    <nameField>
        <displayFormat>ODC-{000000}</displayFormat>
        <label>OBLIGATION DECLARATION ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligation Decl</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>