force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__BeneficiaryTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BeneficiaryTax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-TAX</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TAX DECLARATION</relationshipLabel>
    <relationshipName>TaxDeclaration</relationshipName>
    <type>Lookup</type>
</CustomField>