force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__mAmountDebitCreditDecision__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mAmountDebitCreditDecision__c</fullName>
    <formula>clofor_com_cfs__OpeingBalance__c -  clofor_com_cfs__OpeningBalanceCredit__c +  clofor_com_cfs__TransactionBalanceDebit__c -  clofor_com_cfs__TransactionBalanceCredit__c</formula>
    <label>mAmountDebitCreditDecision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>