force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__ObligationName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ObligationName__c</fullName>
    <label>OBLIGATION NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>