force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__OpeningBalanceCredit__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OpeningBalanceCredit__c</fullName>
    <label>OPENING BALANCE-CREDIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>