force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__PaidForThePeriod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidForThePeriod__c</fullName>
    <label>PAID FOR THE PERIOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>