force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentType__c</fullName>
    <label>PAYMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>