force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__PreviousObligationDeclarationID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousObligationDeclarationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS OBLIGATION DECLARATION ID</label>
    <referenceTo>clofor_com_cfs__TAXDeclaration__c</referenceTo>
    <relationshipLabel>NEXT OBLIGATION DECLARATION</relationshipLabel>
    <relationshipName>PreviousObligationDeclarationID</relationshipName>
    <type>Lookup</type>
</CustomField>