force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/fields/clofor_com_cfs__RollupCreditTransaction__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupCreditTransaction__c</fullName>
    <label>ROLLUP CREDIT TRANSACTION</label>
    <summarizedField>clofor_com_cfs__ACBalanceObligation__c.clofor_com_cfs__CreditTransactionObligation__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ACBalanceObligation__c.clofor_com_cfs__TaxDeclarationID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>