force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/recordTypes/clofor_com_cfs__InsuranceDeclaration.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InsuranceDeclaration</fullName>
    <active>true</active>
    <label>Insurance Declaration</label>
</RecordType>