force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__TaxCategory__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__StartDate__c</columns>
    <columns>clofor_com_cfs__EndDate__c</columns>
    <columns>clofor_com_cfs__OpeingBalance__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceDebit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceCredit__c</columns>
    <columns>clofor_com_cfs__PayableForPeriod__c</columns>
    <columns>clofor_com_cfs__ClosingBalance__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceCredit__c</columns>
    <columns>clofor_com_cfs__PaidForThePeriod__c</columns>
    <columns>clofor_com_cfs__PaymentSettledDate__c</columns>
    <columns>clofor_com_cfs__PaymentType__c</columns>
    <columns>clofor_com_cfs__RemainedBalance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>