force-app/main/default/objects/clofor_com_cfs__TAXDeclaration__c/listViews/clofor_com_cfs__TaxObligationWithGovernment.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__TaxObligationWithGovernment</fullName>
    <columns>clofor_com_cfs__TaxCategory__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__ObligationName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__ObiligationType__c</columns>
    <columns>clofor_com_cfs__PreviousObligationDeclarationID__c</columns>
    <columns>clofor_com_cfs__OpeingBalance__c</columns>
    <columns>clofor_com_cfs__OpeningBalanceCredit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceDebit__c</columns>
    <columns>clofor_com_cfs__TransactionBalanceCredit__c</columns>
    <columns>clofor_com_cfs__PayableForPeriod__c</columns>
    <columns>clofor_com_cfs__ClosingBalance__c</columns>
    <columns>clofor_com_cfs__ClosingBalanceCredit__c</columns>
    <columns>clofor_com_cfs__PaidForThePeriod__c</columns>
    <columns>clofor_com_cfs__RemainedBalance__c</columns>
    <filterScope>Everything</filterScope>
    <label>TAX OBLIGATION WITH GOVERNMENT</label>
    <language>en_US</language>
</ListView>